# hltypes

./: .gitignore  Doxyfile  Info.plist  Makefile.in  configure  configure.ac  fileproperties.rc  hltypes.mkb  hltypes.mkf  libhltypes.project  libhltypes.sln  libhltypes.vcproj  libhltypes.vcxproj  libhltypes.vcxproj.filters  libhltypes_2008.sln  libhltypes_2010.sln  libhltypes_2012.sln  libhltypes_WinRT.sln  libhltypes_WinRT.vcxproj  libhltypes_WinRT.vcxproj.filters  libhltypes_vs2012.sln  libhltypes_vs2013-winrt.sln  libhltypes_vs2013.sln  libhltypes_vs2015-uwp.sln  libhltypes_vs2015.sln
android-studio/lib/: CMakeLists.txt  build.gradle
android-studio/lib/src/main/: AndroidManifest.xml
hltypes.xcodeproj/: project.pbxproj
hlxml/: Doxyfile  fileproperties.rc  hlxml.mkf  libhlxml.project  libhlxml.vcproj  libhlxml.vcxproj  libhlxml.vcxproj.filters  libhlxml_WinRT.vcxproj  libhlxml_WinRT.vcxproj.filters
hlxml/android-studio/lib/: CMakeLists.txt  build.gradle
hlxml/android-studio/lib/src/main/: AndroidManifest.xml
htest/: generate_tests.py  htest.cpp  htest.h
libhltypes-ios.xcodeproj/: project.pbxproj
libhltypes.xcodeproj/: project.pbxproj
props/: v110-winrt.default.props  v110.ClCompile.props  v110.configuration.props  v110.default.props  v110.extra.props
src/: Array.cpp  Makefile.am  exception.cpp  hclipboard.cpp  hconfigfile.cpp  hdbase.cpp  hdir.cpp  henum.cpp  hexception.cpp  hfbase.cpp  hfile.cpp  hlog.cpp  hltypesUtil.cpp  hmutex.cpp  hrdir.cpp  hresource.cpp  hsbase.cpp  hsemaphore.cpp  hstream.cpp  hstring.cpp  hthread.cpp  hversion.cpp  msvc_dirent.h  platform_internal.cpp  platform_internal.h  util.cpp  zipaccess.cpp  zipaccess.h
tests/: Array.cpp  Deque.cpp  Dir.cpp  File.cpp  List.cpp  Map.cpp  Mutex.cpp  Stream.cpp  String.cpp  Thread.cpp
trunk/: Doxyfile  Info.plist  LICENSE  Makefile.am  configure.ac  fileproperties.rc  hltypes.mkb  hltypes.mkf  libhltypes.project  libhltypes.sln  libhltypes.vcproj  libhltypes.vcxproj  libhltypes.vcxproj.filters  libhltypes.workspace  libhltypes_2010.sln  libhltypes_2012.sln  (+6 more)
trunk/src/: Array.cpp  Makefile.am  Makefile.in  exception.cpp  hconfigfile.cpp  hdbase.cpp  hdir.cpp  hexception.cpp  hfbase.cpp  hfile.cpp  hlog.cpp  hltypesUtil.cpp  hmutex.cpp  hrdir.cpp  hresource.cpp  hsbase.cpp  hsemaphore.cpp  hstream.cpp  hstring.cpp  hthread.cpp  hversion.cpp  msvc_dirent.h  util.cpp  zipaccess.cpp  zipaccess.h
trunk/src/platform/: Android_platform.cpp  Apple_platform.mm  Mac_platform.mm  Win32_platform.cpp  WinRT_platform.cpp  iOS_platform.mm
(+966 files in other folders)
