AM_CFLAGS=-I../include/hltypes
AM_CXXFLAGS=-I../include/hltypes
noinst_LTLIBRARIES = libhltypes_src.la
#libhltypes_src_la_configdir = $(libdir)/hltypes/include
#libhltypes_src_la_config_DATA = config.h
libhltypes_src_la_SOURCES =  \
exception.cpp	hfile.cpp	hstring.cpp	util.cpp \
hdir.cpp	hmutex.cpp	hthread.cpp



